JSAI/error/src/test/resources/base/builtins_string-charat.js
var x = "foobar".charAt(3); //"b"
print(x)
x

